--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,8 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/db/*.sqlite3-*
+# Ignore seed data
+/db/seeds.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*
